--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-smooth-scrollbar": "^8.0.6",
     "smooth-scrollbar": "^8.8.3",
+    "smooth-scrollbar-react": "^2.4.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
